--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile-dev
+    env_file: .env
     ports:
       - "8080:8080"
     develop:
